--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -3,5 +3,10 @@
   "birthdayLabel": "День рождения",
   "countryLabel": "Регион",
    "check": "Проверить",
+   "feed": "Новости",
+   "catalog": "Каталог",
+   "map": "Поиск",
+    "chat": "Чат",
+    "profile": "Профиль",
   "verificationTitle": "Давайте убедимся, что вы достигли законного возраста употребления алкоголя в вашей стране."
 }
