feature(feedback): add feedback creation

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,5 +23,12 @@
          "email": "Email",
          "username": "Username",
      "register": "Register",
+     "feedbackBeerTitle": "Review on beer",
+     "feedbackPlaceTitle": "Review on place",
+      "feedbackFeelings": "Describe your feelings:",
+      "feedbackRateBeer": "Rate beer:",
+      "feedbackRatePlace": "Rate place:",
+      "feedbackSharePhotos": "Share photos:",
+      "send": "Send",
   "verificationTitle": "Let's make sure that you have reached the legal drinking age in your country."
 }
