fix(navigation): fix routes navigation auth state check

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,5 +1,6 @@
 {
   "title": "Хмельная гармония",
+  "underaged": "Вы не достигли возраста что бы пить пиво",
   "birthdayLabel": "День рождения",
   "countryLabel": "Регион",
    "check": "Проверить",
