--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
   "title": "Beer Harmony",
+  "underaged": "You haven't reached the age to drink beer.",
   "birthdayLabel": "Birthday",
     "countryLabel": "Country",
     "check": "Check",
