feature(profile): add levels

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "underaged": "You haven't reached the age to drink beer.",
   "birthdayLabel": "Birthday",
     "countryLabel": "Country",
+    "phone": "Phone",
     "check": "Check",
     "feed": "Feed",
     "catalog": "Catalog",
