--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -3,6 +3,7 @@
   "underaged": "Вы не достигли возраста что бы пить пиво",
   "birthdayLabel": "День рождения",
   "countryLabel": "Регион",
+  "phone": "Телефон",
    "check": "Проверить",
    "feed": "Новости",
    "catalog": "Каталог",
