--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -24,11 +24,9 @@
     "email": "Email",
     "username": "Имя пользователя",
     "register": "Зарегистрироваться",
-     "feedbackBeerTitle": "Отзыв на пиво",
-         "feedbackPlaceTitle": "Отзыв на бар",
+     "feedbackBeerTitle": "Отзыв",
          "feedbackFeelings": "Опишите свои впечатления:",
-         "feedbackRateBeer": "Оцените пиво:",
-         "feedbackRatePlace": "Оцените бар:",
+         "feedbackRateBeer": "Оцените пиво или бар:",
          "feedbackSharePhotos": "Поделитесь фото:",
          "send": "Отправить",
   "verificationTitle": "Давайте убедимся, что вы достигли законного возраста употребления алкоголя в вашей стране."
