docs(root): add ci badge

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,7 +8,7 @@
     "feed": "Feed",
     "catalog": "Catalog",
     "map": "Search",
-       "chat": "Chat",
+       "chat": "Teemates",
        "profile": "Account",
        "loginOrRegister": "Log in / Sign in",
 
