--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -8,7 +8,7 @@
    "feed": "Новости",
    "catalog": "Каталог",
    "map": "Поиск",
-    "chat": "Чат",
+    "chat": "Собутыльники",
     "profile": "Профиль",
     "loginOrRegister": "Войти или зарегистрироваться",
     "promo": "Присоеденяйтесь к команде Хмельной Гармонии и познайте дзен пива!",
