feature(people_nearby): add people nearby

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,6 +9,7 @@
     "catalog": "Catalog",
     "map": "Search",
        "chat": "Teemates",
+       "emptyPeople": "No teammates nearby",
        "profile": "Account",
        "loginOrRegister": "Log in / Sign in",
 
