--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -9,6 +9,7 @@
    "catalog": "Каталог",
    "map": "Поиск",
     "chat": "Собутыльники",
+    "emptyPeople": "Нет собутыльников рядом",
     "profile": "Профиль",
     "loginOrRegister": "Войти или зарегистрироваться",
     "promo": "Присоеденяйтесь к команде Хмельной Гармонии и познайте дзен пива!",
